firebase authentication done

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 
     <title>Index BBY06</title>
+
+    <!-- link to the API keys for the firebase project -->
+    <script src="scripts/my_script.js"></script>
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -76,7 +80,7 @@
           <br>
 
           <div class="d-grid gap-2">
-            <button class="btn btn-success" type="button" >Get Started!</button>
+            <a href="login.html" class="btn btn-success" role="button"> Get Started! </a>
           </div>
 
       </div>
