--- a/main.html
+++ b/main.html
@@ -48,6 +48,10 @@
 
 
     <title>Main BBY06</title>
+
+    <!-- link to api keys for the firebase project-->
+    <string src="strings/my_script.js"></string>
+    
 </head>
 
 <body>
