--- a/profile.html
+++ b/profile.html
@@ -119,6 +119,9 @@
     }
   </style>
 
+  <!-- link to all the api keys for the project -->
+  <script src="scripts/my_script.js"></script>
+
 </head>
 
 <body>
