--- a/login.html
+++ b/login.html
@@ -6,9 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap FirebaseUI CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
 
   <!-- Google Icons (Material Design)-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,7 +29,7 @@
     }
 
     header {
-      background: whitesmoke;
+      background: green;
     }
 
     header::after {
@@ -46,29 +47,32 @@
     }
 
     nav {
-      float: right;
+      float: left;
+      color: white;
     }
 
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
+    h1 {
+      font-family: 'Times New Roman', Times, serif;
+      text-align: center;
+      color: green;
     }
 
-    nav li {
-      display: inline-block;
-      margin-left: 80px;
-      padding-top: 45px;
-    }
 
-    nav a {
-      color: black;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 25px;
-    }
   </style>
+
+  <!-- Firebase 8 CDNs-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+    </script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+
+  <!-- link to the api keys for the firebase project -->
+  <script src="scripts/my_script.js"></script>
+
 </head>
 
 <body>
@@ -80,39 +84,60 @@
       <img src="bowl.png" alt="logo" class="logo">
 
       <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Profile</a></li>
-        </ul>
+        <h2>FitMeal</h2>
       </nav>
+
 
     </div>
   </header>
-
   <br><br>
-
-  <div class="text-center">
-    <label for="username" class="form-label">Username or Email</label>
-    <input type="email" class="form-control" id="username" placeholder="name@example.com">
-  </div>
-
+  
+  <h1> Sign in to your <b>FitMeal</b> Account </h1>
   <br>
-  <div class="text-center">
-    <label for="password" class="form-label">Password</label>
-    <input type="password" class="form-control" id="password">
-  </div>
 
-  <br>
-  <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-success" type="button">Sign-In</button>
-  </div>
+  <div id="firebaseui-auth-container"></div>
+  <div id="loader">Loading...</div>
 
-  <br>
-  <p class="text-center">Or
-    <br><br>
-    <a href="#" class="link-success">Register Now</a>
-  </p>
+  <!-- JS files -->
+  <script>
+    // Initializing the firebase UI widget using firebase.
+    var ui = new firebaseui.auth.AuthUI(firebase.auth());
+    var uiConfig = {
+      callbacks: {
+        signInSuccessWithAuthResult: function (authResult, redirectUrl) {
+          // User successfully signed in.
+          // Return type determines whether we continue the redirect automatically
+          // or whether we leave that to developer to handle.
+          return true;
+        },
+        uiShown: function () {
+          // The widget is rendered.
+          // Hide the loader.
+          document.getElementById('loader').style.display = 'none';
+        }
+      },
+      // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+      signInFlow: 'popup',
+      signInSuccessUrl: 'main.html',
+      signInOptions: [
+        // Leave the lines as is for the providers you want to offer your users.
+        //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+        //firebase.auth.FacebookAuthProvider.PROVIDER_ID,
+        //firebase.auth.TwitterAuthProvider.PROVIDER_ID,
+        //firebase.auth.GithubAuthProvider.PROVIDER_ID,
+        firebase.auth.EmailAuthProvider.PROVIDER_ID,
+        //firebase.auth.PhoneAuthProvider.PROVIDER_ID
+      ],
+      // Terms of service url.
+      tosUrl: '<your-tos-url>',
+      // Privacy policy url.
+      privacyPolicyUrl: '<your-privacy-policy-url>'
+    };
+
+    // The start method will wait until the DOM is loaded.
+    ui.start('#firebaseui-auth-container', uiConfig);
+
+  </script>
 </body>
 
 </html>
