functionality to display signed in user name and solved login problem

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
             color: #005c17;
             text-align: center;
         }
+        body{
+          background-color: rgb(219, 243, 219);
+        }
+
+        .button{
+          text-align: center;
+        }
 
 
     </style>
@@ -79,8 +86,8 @@
           <br>
           <br>
 
-          <div class="d-grid gap-2">
-            <a href="login.html" class="btn btn-success" role="button"> Get Started! </a>
+          <div class="button">
+            <a href="login.html" class="btn btn-warning btn-outline-success" style= "width: 200px"  float:right role="button"> Get Started! </a>
           </div>
 
       </div>
