--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -148,14 +148,13 @@
       background-image: radial-gradient(lightgreen, whitesmoke);
     }
 
-    @media screen and (max-width: 700px){
-    header {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+    @media screen and (max-width: 700px) {
+      header {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
     }
-  }
-
   </style>
 </head>
 
@@ -184,25 +183,29 @@
           // User successfully signed in.
           // Return type determines whether we continue the redirect automatically
           // or whether we leave that to developer to handle.
-          var user = authResult.user;
-
-          //determine if the user is new or not
-          if (authResult.additionalUserInfo.isNewUser) {
-            db.collection("users").doc(user.uid).set({
-                name: user.displayName,
-                email: user.email
-              }).then(function () {
-                window.location.assign("main.html");
-              })
+          //------------------------------------------------------------------------------------------
+          // The code below is modified from default snippet provided by the FB documentation.
+          //
+          // If the user is a "brand new" user, then create a new "user" in your own database.
+          // Assign this user with the name and email provided.
+          // Before this works, you must enable "Firestore" from the firebase console.
+          // The Firestore rules must allow the user to write. 
+          //------------------------------------------------------------------------------------------
+          var user = authResult.user;                            // get the user object from the Firebase authentication database
+          if (authResult.additionalUserInfo.isNewUser) {         //if new user
+            db.collection("users").doc(user.uid).set({         //write to firestore. We are using the UID for the ID in users collection
+              name: user.displayName,                    //"users" collection
+              email: user.email                          //with authenticated user's ID (user.uid)
+            }).then(function () {
+              console.log("New user added to firestore");
+              window.location.assign("main.html");       //re-direct to main.html after signup
+            })
               .catch(function (error) {
-                console.log("error is" + error);
-              })
-
+                console.log("Error adding new user: " + error);
+              });
           } else {
             return true;
-
           }
-
           return false;
         },
         uiShown: function () {
