--- a/details.html
+++ b/details.html
@@ -46,7 +46,7 @@
 
   <div class="container rounded bg-white mt-5 mb-5">
 
-    <img class="details-img" src="..." alt="...">
+    <img class="details-img" src="..." alt="recipe-name">
     <br><br>
     <h1 id="details-name"></h1>
     <br><br>
@@ -62,8 +62,8 @@
     <br>
     <h2><b>Nutrients</b><br> <span id="details-nutrients"></span></h2>
     <br>
-    <iframe id="details-youtube" width="420" height="345" src="...">
-    </iframe>
+    <!--iframe id="details-youtube" width="420" height="345" src="...">
+    </iframe--> 
   </div>
   <br>
 
@@ -97,7 +97,8 @@
         let ingredients = userDoc.data().Ingredients;
         let prep = userDoc.data().Prep;
         let serves = userDoc.data().Serves;
-        let youtube = userDoc.data().Youtube;
+        let nutrients = userDoc.data().Nutrients;
+       // let youtube = userDoc.data().Youtube;
 
 
         console.log(name);
@@ -107,7 +108,8 @@
         document.getElementById("details-ingredients").innerHTML = ingredients;
         document.getElementById("details-serves").innerHTML = serves;
         document.getElementById("details-prep").innerHTML = prep;
-        document.getElementById("details-youtube").innerHTML = youtube;
+        document.getElementById("details-nutrients").innerHTML = nutrients;
+        //document.getElementById("details-youtube").innerHTML = youtube;
         document.getElementById('details-img').src = "./images/" + name + ".jpg";
         newcard.querySelector('.details-img').src = "./images/" + name + ".jpg"; 
 
